# dlm

./: .gitignore  LICENSE  README.md  environment.yml  llm_config.example.toml  pyproject.toml
docs/: index.html  styles.css
examples/: custom_dataset.py  llm_search.py  llm_search_multifeature.py  quickstart.py
src/dlm/: __init__.py  cli.py  env.py  output.py  rewards.py  search.py
src/dlm/llm/: __init__.py  anthropic.py  base.py  config.py  gemini.py  openai.py
src/dlm/rl/: __init__.py  networks.py  trainer.py
